[package]
name = "video-rs"
description = "High-level video toolkit based on ffmpeg."
keywords = ["video", "ffmpeg", "encoding", "decoding", "muxing"]
categories = ["multimedia", "multimedia::video"]
version = "0.10.5"
authors = ["Oddity.ai Developers <hello@oddity.ai>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/oddity-ai/video-rs"
readme = "README.md"

[dependencies]
ffmpeg-next = { version = "8.0", features = [
	"format",
	"codec",
	"software-resampling",
	"software-scaling",
] }
ndarray = { version = "0.16", optional = true }
tracing = "0.1"
url = "2"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = "0.3"

[[example]]
name = "encode"
required-features = ["h264", "vp9", "ndarray"]

[features]
default = ["h264", "vp9", "ndarray"]
h264 = []
vp9 = []
ndarray = ["dep:ndarray"]

[package.metadata.docs.rs]
all-features = true
